--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.github.f4b6a3:tsid-creator:5.2.6'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 
     compileOnly 'org.projectlombok:lombok'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
     annotationProcessor 'org.projectlombok:lombok'
 
