--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -27,3 +27,6 @@ naver.sens.access-key=ACCESS_KEY
 naver.sens.secret-key=SECRET_KEY
 naver.sens.service-id=SERVICE_ID
 naver.sens.channel-id=CHANNEL_ID
+
+# JWT
+jwt.secret-key=SECRET_KEY
