--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,20 +2,20 @@
 allow.client.urls=http://localhost:5500
 
 # DB
-spring.datasource.url=jdbc:mysql://localhost:3306/everyone_waiter
+spring.datasource.url=jdbc:mysql://localhost:3306/everyone_waiter?rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# SQL
+spring.sql.init.mode=never
+spring.sql.init.schema-locations=classpath:scheme.sql
+logging.level.org.springframework.jdbc=info
 
 # REDIS
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=1234
-
-# JPA
-spring.jpa.properties.hibernate.default_batch_fetch_size=100
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.open-in-view=false
 
 # MAIL
 spring.mail.host=smtp.gmail.com
