--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,20 +2,20 @@
 allow.client.urls=http://localhost:5500
 
 # DB
-spring.datasource.url=jdbc:p6spy:h2:mem:everyone_waiter;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:mysql://localhost:3306/everyone_waiter_test?rewriteBatchedStatements=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# SQL
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:scheme.sql
+logging.level.org.springframework.jdbc=trace
 
 # REDIS
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=1234
-
-# JPA
-spring.jpa.properties.hibernate.default_batch_fetch_size=100
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=false
 
 # MAIL
 spring.mail.host=smtp.gmail.com
