feat: 메일 발송 기능 구현 (#16)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 spring.application.name=everyonewaiter
 spring.profiles.active=local
 spring.main.allow-bean-definition-overriding=true
+
+# MAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.username=EMAIL
+spring.mail.password=PASSWORD
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.mime.charset=UTF-8
+
+# NAVER SENS
+naver.sens.access-key=ACCESS_KEY
+naver.sens.secret-key=SECRET_KEY
+naver.sens.service-id=SERVICE_ID
+naver.sens.channel-id=CHANNEL_ID
