--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=everyonewaiter
 spring.profiles.active=local
-spring.main.allow-bean-definition-overriding=true
+
+# MESSAGE SOURCE
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=false
 
 # MAIL
 spring.mail.host=smtp.gmail.com
