--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,23 +40,22 @@ jobs:
           docker tag ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
           docker push ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
-      - name: Setup OCI Instance Public Key
-        run: echo "${{ secrets.OCI_INSTANCE_PUBLIC_KEY }}" > ./oci_instance_ssh.key.pub
-
       - name: OCI Bastion Session Create
-        uses: oracle-actions/run-oci-cli-command@v1.3.2
-        env:
-          OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
-          OCI_CLI_TENANCY: ${{ secrets.OCI_CLI_TENANCY }}
-          OCI_CLI_FINGERPRINT: ${{ secrets.OCI_CLI_FINGERPRINT }}
-          OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
-          OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
+        id: bastion
+        uses: domenikk/oci-bastion-action@v1
         with:
-          command: |
-            bastion session create-managed-ssh
-              --bastion-id ${{ secrets.OCI_BASTION_ID }}
-              --display-name "GithubActionSession"
-              --key-type PUB
-              --ssh-public-key-file ./oci_instance_ssh.key.pub
-              --target-resource-id ${{ secrets.OCI_INSTANCE_ID }}
-              --target-os-username ubuntu
+          oci-user: ${{ secrets.OCI_CLI_USER }}
+          oci-tenancy: ${{ secrets.OCI_CLI_TENANCY }}
+          oci-fingerprint: ${{ secrets.OCI_CLI_FINGERPRINT }}
+          oci-key-content: ${{ secrets.OCI_CLI_KEY_CONTENT }}
+          oci-region: ${{ secrets.OCI_CLI_REGION }}
+          bastion-id: ${{ secrets.OCI_BASTION_ID }}
+          public-key: ${{ secrets.OCI_INSTANCE_PUBLIC_KEY }}
+          session-type: 'MANAGED_SSH'
+          session‑ttl‑seconds: 1200
+          target-resource-id: ${{ secrets.OCI_INSTANCE_ID }}
+          target-resource-user: 'ubuntu'
+
+      - name: Execute SSH Command
+        run: |
+          echo '${{ steps.bastion.outputs.ssh-command }}'
