--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,16 +57,18 @@ jobs:
 
       - name: Copy OCI Instance SSH Private Key
         run: |
-          echo "${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}" > ./oci_instance_ssh.key
-          chmod 600 ./oci_instance_ssh.key
+          mkdir ~/.ssh
+          ssh-keyscan -H ${{ secrets.OCI_BASTION_PUBLIC_IP }} >> ~/.ssh/known_hosts
+          echo "${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Setup SSH Tunnel
         run: |
-          ssh -i ./oci_instance_ssh.key -N -L 6000:${{ secrets.OCI_INSTANCE_PRIVATE_IP }}:22 -p 22 ${{ steps.bastion.outputs.session-id }}@${{ secrets.OCI_BASTION_PUBLIC_IP }} &
+          ssh -fN -L 2222:${{ secrets.OCI_INSTANCE_PRIVATE_IP }}:22 -p 22 ${{ steps.bastion.outputs.session-id }}@${{ secrets.OCI_BASTION_PUBLIC_IP }}
 
       - name: Connect SSH & Deploy
         run: |
-          ssh -i ./oci_instance_ssh.key -p 6000 ubuntu@localhost
+          ssh -p 2222 ubuntu@localhost
           echo "Connected OCI"
           pwd
 
