--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,21 +55,18 @@ jobs:
           target-resource-id: ${{ secrets.OCI_INSTANCE_ID }}
           target-resource-port: 22
 
-      - name: Copy OCI Instance SSH Private Key
-        run: |
-          mkdir ~/.ssh
-          echo "${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}" > ~/.ssh/oci_instance_ssh.key
-          chmod 600 ~/.ssh/oci_instance_ssh.key
-
       - name: Setup SSH Tunnel
         run: |
+          mkdir ~/.ssh
           ssh-keyscan -H ${{ secrets.OCI_BASTION_PUBLIC_IP }} >> ~/.ssh/known_hosts
-          ssh -i ~/.ssh/oci_instance_ssh.key -fN -L 2222:${{ secrets.OCI_INSTANCE_PRIVATE_IP }}:22 -p 22 ${{ steps.bastion.outputs.session-id }}@${{ secrets.OCI_BASTION_PUBLIC_IP }}
+          echo "${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}" > ./oci_instance_ssh.key
+          chmod 600 ./oci_instance_ssh.key
+          ssh -i ./oci_instance_ssh.key -fN -L 2222:${{ secrets.OCI_INSTANCE_PRIVATE_IP }}:22 -p 22 ${{ steps.bastion.outputs.session-id }}@${{ secrets.OCI_BASTION_PUBLIC_IP }}
 
       - name: Connect SSH & Deploy
         run: |
-          ssh-keyscan -H localhost >> ~/.ssh/known_hosts
-          ssh -i ~/.ssh/oci_instance_ssh.key -p 2222 ubuntu@localhost
+          ssh-keyscan -p 2222 localhost >> ~/.ssh/known_hosts
+          ssh -i ./oci_instance_ssh.key -p 2222 ubuntu@localhost
           echo "Connected OCI"
           pwd
 
