--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Push Release to Docker Hub
         run: |
-          docker build -t ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development .
+          docker build --platform linux/arm64 -t ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development .
           docker tag ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
           docker push ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
@@ -67,8 +67,7 @@ jobs:
         run: |
           ssh-keyscan -p 2222 localhost >> ~/.ssh/known_hosts
           ssh -i ./oci_instance_ssh.key -p 2222 ubuntu@localhost
-          echo "Connected OCI"
-          pwd
+          docker pull ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
       - name: Cleanup SSH
         if: always()
