--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,19 +55,17 @@ jobs:
           target-resource-id: ${{ secrets.OCI_INSTANCE_ID }}
           target-resource-port: 22
 
-      - name: Setup SSH Tunnel
+      - name: Connect SSH & Deploy
         run: |
           mkdir ~/.ssh
           ssh-keyscan -H ${{ secrets.OCI_BASTION_PUBLIC_IP }} >> ~/.ssh/known_hosts
-          echo "${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}" > ./oci_instance_ssh.key
-          chmod 600 ./oci_instance_ssh.key
-          ssh -i ./oci_instance_ssh.key -fN -L 2222:${{ secrets.OCI_INSTANCE_PRIVATE_IP }}:22 -p 22 ${{ steps.bastion.outputs.session-id }}@${{ secrets.OCI_BASTION_PUBLIC_IP }}
-
-      - name: Connect SSH & Deploy
-        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add - <<< ${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}
+          ssh -fN -L 2222:${{ secrets.OCI_INSTANCE_PRIVATE_IP }}:22 -p 22 ${{ steps.bastion.outputs.session-id }}@${{ secrets.OCI_BASTION_PUBLIC_IP }}
+          sleep 5
           ssh-keyscan -p 2222 localhost >> ~/.ssh/known_hosts
-          ssh -i ./oci_instance_ssh.key -p 2222 ubuntu@localhost
-          docker pull ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
+          ssh -p 2222 ubuntu@localhost
+          sudo docker pull ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
       - name: Cleanup SSH
         if: always()
