--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,36 +9,36 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     steps:
-      #      - name: Pull Github Repository
-      #        uses: actions/checkout@v4
-      #
-      #      - name: Install JDK 21
-      #        uses: actions/setup-java@v4
-      #        with:
-      #          distribution: temurin
-      #          java-version: 21
-      #
-      #      - name: Setup application.properties
-      #        run: |
-      #          rm -rf ./src/main/resources/application.properties
-      #          rm -rf ./src/main/resources/application-dev.properties
-      #          echo "${{ secrets.DEV_ROOT_APPLICATION_PROPERTIES }}" > ./src/main/resources/application.properties
-      #          echo "${{ secrets.DEV_APPLICATION_PROPERTIES }}" > ./src/main/resources/application-dev.properties
-      #
-      #      - name: Gradle Build
-      #        run: ./gradlew clean build
-      #
-      #      - name: Login to Docker Hub
-      #        uses: docker/login-action@v3
-      #        with:
-      #          username: ${{ vars.DOCKERHUB_USERNAME }}
-      #          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      #
-      #      - name: Push Release to Docker Hub
-      #        run: |
-      #          docker build --platform linux/arm64 -t ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development .
-      #          docker tag ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
-      #          docker push ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
+      - name: Pull Github Repository
+        uses: actions/checkout@v4
+
+      - name: Install JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Setup application.properties
+        run: |
+          rm -rf ./src/main/resources/application.properties
+          rm -rf ./src/main/resources/application-dev.properties
+          echo "${{ secrets.DEV_ROOT_APPLICATION_PROPERTIES }}" > ./src/main/resources/application.properties
+          echo "${{ secrets.DEV_APPLICATION_PROPERTIES }}" > ./src/main/resources/application-dev.properties
+
+      - name: Gradle Build
+        run: ./gradlew clean build
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push Release to Docker Hub
+        run: |
+          docker build --platform linux/arm64 -t ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development .
+          docker tag ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
+          docker push ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
       - name: OCI Bastion Session Create
         id: bastion
