--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,6 @@ jobs:
 
       - name: Connect SSH & Deploy
         run: |
-          echo "${{ steps.bastion.outputs.ssh-command }}"
           mkdir ~/.ssh
           ssh-keyscan -H ${{ secrets.OCI_BASTION_PUBLIC_IP }} >> ~/.ssh/known_hosts
           echo "${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}" > ~/.ssh/oci_instance_ssh.key
@@ -66,7 +65,11 @@ jobs:
           sleep 5
           ssh-keyscan -p 2222 localhost >> ~/.ssh/known_hosts
           ssh -i ~/.ssh/oci_instance_ssh.key -p 2222 ubuntu@localhost
+          sudo docker login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          sudo docker stop everyone-waiter || true
+          sudo docker rm everyone-waiter || true
           sudo docker pull ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
+          sudo docker run -d -p 8080:8080 --name everyone-waiter --network everyonewaiter-network ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
       - name: Cleanup SSH
         if: always()
