--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Push Release to Docker Hub
         run: |
-          docker build --platform linux/arm64 -t ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development .
+          docker build -t ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development .
           docker tag ${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
           docker push ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.DOCKERHUB_REPOSITORY_NAME }}:development
 
