--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,3 +52,36 @@ jobs:
           docker build --platform linux/arm64/v8 -t everyonewaiter-backend .
           docker tag "everyonewaiter-backend" "${{ steps.get-ocir-repository.outputs.repo_path }}:development"
           docker push "${{ steps.get-ocir-repository.outputs.repo_path }}:development"
+
+      - name: Create OCI Bastion Session
+        uses: domenikk/oci-bastion-action@v1
+        id: bastion
+        with:
+          oci‑user: $OCI_CLI_USER
+          oci‑tenancy: $OCI_CLI_TENANCY
+          oci‑fingerprint: $OCI_CLI_FINGERPRINT
+          oci-key-content: $OCI_CLI_KEY_CONTENT
+          oci-region: $OCI_CLI_REGION
+          bastion-id: ${{ secrets.OCI_BASTION_OCID }}
+          public-key: ${{ secrets.OCI_INSTANCE_PUBLIC_KEY }}
+          session-type: 'MANAGED_SSH'
+          target-resource-id: ${{ secrets.OCI_INSTANCE_OCID }}
+          target-resource-user: 'opc'
+
+      - name: Connect SSH
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.OCI_HOST }}
+          username: 'opc'
+          key: ${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}
+          port: '22'
+          proxy_host: ${{ secrets.OCI_PROXY_HOST }}
+          proxy_username: ${{ steps.bastion.outputs.session-id }}
+          proxy_key: ${{ secrets.OCI_INSTANCE_PRIVATE_KEY }}
+          proxy_port: '22'
+          script: |
+            echo "${{ secrets.OCI_AUTH_TOKEN }}" | docker login ${{ secrets.OCIR_REGION_KEY }} -u ${{ secrets.OCIR_DOCKER_USERNAME }} --password-stdin
+            sudo docker stop everyonewaiter-backend || true
+            sudo docker rm everyonewaiter-backend || true
+            sudo docker pull ${{ steps.get-ocir-repository.outputs.repo_path }}:development
+            sudo docker run -d -p 8080:8080 --name everyonewaiter-backend --network everyonewaiter-network ${{ steps.get-ocir-repository.outputs.repo_path }}:development
