--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: oracle-actions/get-ocir-repository@v1.3.0
         id: get-ocir-repository
         with:
-          name: backend-container-repo
+          name: backend-development
           compartment: ${{ secrets.OCI_COMPARTMENT_OCID }}
 
       - name: Log into OCIR
@@ -49,9 +49,9 @@ jobs:
 
       - name: Push container image
         run: |
-          docker build --platform linux/arm64/v8 -t everyonewaiter-backend:development .
-          docker tag everyonewaiter-backend:development ${{ steps.get-ocir-repository.outputs.repo_path }}:development
-          docker push ${{ steps.get-ocir-repository.outputs.repo_path }}:development
+          docker build --platform linux/arm64/v8 -t everyonewaiter-backend:${{ github.sha }} .
+          docker tag everyonewaiter-backend:development ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
+          docker push ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
 
       - name: Create OCI Bastion Session
         uses: domenikk/oci-bastion-action@v1
@@ -83,5 +83,6 @@ jobs:
             echo "${{ secrets.OCI_AUTH_TOKEN }}" | docker login ${{ secrets.OCIR_REGION_KEY }} -u ${{ secrets.OCIR_DOCKER_USERNAME }} --password-stdin
             sudo docker stop everyonewaiter-backend || true
             sudo docker rm everyonewaiter-backend || true
-            sudo docker pull ${{ steps.get-ocir-repository.outputs.repo_path }}:development
-            sudo docker run -d -p 8080:8080 --name everyonewaiter-backend --network everyonewaiter-network ${{ steps.get-ocir-repository.outputs.repo_path }}:development
+            sudo docker image ls --filter=reference="${{ steps.get-ocir-repository.outputs.repo_path }}*" --format "{{.ID}}" | xargs sudo docker rmi || true
+            sudo docker pull ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
+            sudo docker run -d -p 8080:8080 --name everyonewaiter-backend --network everyonewaiter-network ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
