--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Push container image
         run: |
           docker build --platform linux/arm64/v8 -t everyonewaiter-backend:${{ github.sha }} .
-          docker tag everyonewaiter-backend:development ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
+          docker tag everyonewaiter-backend:${{ github.sha }} ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
           docker push ${{ steps.get-ocir-repository.outputs.repo_path }}:${{ github.sha }}
 
       - name: Create OCI Bastion Session
