feat: 도커 컴포즈 mysql 볼륨 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: everyone_waiter
+    volumes:
+      - ./mysql:/var/lib/mysql
     ports:
       - "3306:3306"
     healthcheck:
